(Sonar) Fixed finding: "`Stream.toList()` should be used instead of `collectors`" (#430)
## Remediation

This change fixes "`Stream.toList()` should be used instead of
`collectors`" (id =
[java:S6204](https://rules.sonarsource.com/java/RSPEC-6204)) identified
by Sonar.

## Details

This change modernizes a stream's `List` creation to be driven from the
simple, and more readable
[`Stream#toList()`](https://docs.oracle.com/javase/16/docs/api/java.base/java/util/stream/Collectors.html#toList())
method.

Our changes look something like this:

```diff
- List<Integer> numbers = someStream.collect(Collectors.toList());
+ List<Integer> numbers = someStream.toList();
```

<details>
  <summary>More reading</summary>

*
[https://rules.sonarsource.com/java/RSPEC-6204/](https://rules.sonarsource.com/java/RSPEC-6204/)
</details>

🧚🤖  Powered by Pixeebot  

[Feedback](https://ask.pixee.ai/feedback) |
[Community](https://pixee-community.slack.com/signup#/domain-signup) |
[Docs](https://docs.pixee.ai/) | Codemod ID:
[sonar:java/replace-stream-collectors-to-list-s6204](https://docs.pixee.ai/codemods/java/sonar_java_replace-stream-collectors-to-list-s6204)
![](https://d1zaessa2hpsmj.cloudfront.net/pixel/v1/track?writeKey=2PI43jNm7atYvAuK7rJUz3Kcd6A&event=DRIP_PR%7Cpixee%2Fcodemodder-java%7C3fbd9552ce45b43b166a67aade0450c3c7a085c2)



<!--{"type":"DRIP","codemod":"sonar:java/replace-stream-collectors-to-list-s6204"}-->

---------

Co-authored-by: pixeebot[bot] <104101892+pixeebot[bot]@users.noreply.github.com>
Co-authored-by: Ryan Dens <ryan.dens@pixee.ai>